ionos_sbx/bacula/bacula-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bacula-db
  namespace: bacula
  labels:
    app.kubernetes.io/instance: bacula-db
    app.kubernetes.io/name: bacula-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: bacula-db
      app.kubernetes.io/name: bacula-db
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bacula-db
        app.kubernetes.io/name: bacula-db
    spec:
      securityContext:
        runAsUser: 0    # Root user UID
        runAsGroup: 0   # Root group GID
        fsGroup: 0      # Ensures mounted volumes are accessible to root
      containers:
        - name: bacula-db
          image: fametec/bacula-catalog:11.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: bacula-db-pvc
