ionos_sbx/bacula/bacula-dir-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bacula-dir
  namespace: bacula
  labels:
    app.kubernetes.io/instance: bacula-dir
    app.kubernetes.io/name: bacula-dir
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: bacula-dir
      app.kubernetes.io/name: bacula-dir
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bacula-dir
        app.kubernetes.io/name: bacula-dir
    spec:
      containers:
        - name: bacula-dir
          image: fametec/bacula-director:11.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 9101
              name: http
              protocol: TCP
          volumeMounts:
            - ./etc:/opt/bacula/etc:ro
          depends_on: 
            - bacula-db 
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      volumes: 
        - ./etc:/opt/bacula/etc:ro
