ionos_sbx/bacula/bacula-sd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bacula-sd
  namespace: bacula
  labels:
    app.kubernetes.io/instance: bacula-sd
    app.kubernetes.io/name: bacula-sd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: bacula-sd
      app.kubernetes.io/name: bacula-sd
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bacula-sd
        app.kubernetes.io/name: bacula-sd
    spec:
      containers:
        - name: bacula-sd
          image: fametec/bacula-storage:11.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 9103
              name: bacula-sd
              protocol: TCP
          volumeMounts:
            - mountPath: /opt
              name: bacula-sd-pvc
      volumes:
        - name: bacula-sd-pvc
          persistentVolumeClaim:
            claimName: bacula-sd-pvc
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
