ionos_sbx/bacula/baculum-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baculum-api
  namespace: bacula
  labels:
    app.kubernetes.io/instance: baculum-api
    app.kubernetes.io/name: baculum-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: baculum-api
      app.kubernetes.io/name: baculum-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: baculum-api
        app.kubernetes.io/name: baculum-api
    spec:
      containers:
        - name: baculum-api
          image: fametec/baculum-api:11.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 9096
              name: baculum-api
              protocol: TCP
#          volumeMounts:
#            - mountPath: /opt
#              name: baculum-api-pvc
#            - mountPath: /etc
#              name: baculum-api-pvc
#          securityContext:
#            runAsUser: 33
#            runAsGroup: 33
#      volumes:
#        - name: baculum-api-pvc
#          persistentVolumeClaim:
#            claimName: baculum-api-pvc
#      securityContext:
#        fsGroup: 33
#        runAsGroup: 33
#        runAsUser: 33
