ionos_sbx/bacula/baculum-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baculum-web
  namespace: bacula
  labels:
    app.kubernetes.io/instance: baculum-web
    app.kubernetes.io/name: baculum-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: baculum-web
      app.kubernetes.io/name: baculum-web
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: baculum-web
        app.kubernetes.io/name: baculum-web
    spec:
      containers:
        - name: baculum-web
          image: fametec/baculum-web:11.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 9095
              name: baculum-web
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/bacula
              name: baculum-web-pvc
              subPath: opt/bacula  # Mount only the /opt/bacula subdirectory of the PVC
            - mountPath: /etc/bacula
              name: baculum-web-pvc
              subPath: etc/bacula  # Mount only the /etc/bacula subdirectory of the PVC
      volumes:
        - name: baculum-web-pvc
          persistentVolumeClaim:
            claimName: baculum-web-pvc
