ionos_sbx/bacula/bacula-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-db
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula-db
    app.kubernetes.io/name: bacula-db
  ports:
    - name: http
      port: 5432
      protocol: TCP
      targetPort: 5432
