ionos_sbx/bacula/bacula-dir-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-dir
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula
    app.kubernetes.io/name: bacula
  ports:
    - name: http
      port: 9101
      protocol: TCP
      targetPort: 9101
