ionos_sbx/bacula/bacula-fd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-fd
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula-fd
    app.kubernetes.io/name: bacula-fd
  ports:
    - name: http
      port: 9102
      protocol: TCP
      targetPort: 9102
