ionos_sbx/bacula/bacula-sd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-sd
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula-sd
    app.kubernetes.io/name: bacula-sd
  ports:
    - name: http
      port: 9103
      protocol: TCP
      targetPort: 9103
