ionos_sbx/bacula/baculum-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baculum-api
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula
    app.kubernetes.io/name: bacula
  ports:
    - name: http
      port: 9096
      protocol: TCP
      targetPort: 9096
