ionos_sbx/bacula/baculum-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baculum-web
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: baculum-web
    app.kubernetes.io/name: baculum-web
  ports:
    - name: http
      port: 9095
      protocol: TCP
      targetPort: 9095
