ionos_sbx/bacula/service-bacula-dir.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-dir
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula
    app.kubernetes.io/name: bacula
  ports:
    - name: http
      port: 9101
      protocol: TCP
      targetPort: 9101

    # bacula-dir:
    # image: fametec/bacula-director:11.0.5
    # restart: unless-stopped
    # volumes:
    #   - ./etc:/opt/bacula/etc:ro
    # depends_on: 
    #   - db      
    # ports:
    #   - 9101:9101
