ionos_sbx/bacula/service-bacula-fd.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-fd
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula
    app.kubernetes.io/name: bacula
  ports:
    - name: http
      port: 9102
      protocol: TCP
      targetPort: 9102

  # bacula-fd:
  #   image: fametec/bacula-client:11.0.5
  #   restart: unless-stopped
  #   depends_on:
  #     - bacula-sd
  #     - bacula-dir
  #     - db
  #   volumes:
  #     - ./etc:/opt/bacula/etc:ro
  #   ports:
  #     - 9102:9102
