ionos_sbx/bacula/service-baculum-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: baculum-api
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula
    app.kubernetes.io/name: bacula
  ports:
    - name: http
      port: 9096
      protocol: TCP
      targetPort: 9096


    #     baculum-api:
    # image: fametec/baculum-api:11.0.5
    # restart: unless-stopped
    # depends_on: 
    #   - db
    #   - bacula-dir
    # volumes:
    #   - ./etc/bconsole.conf:/opt/bacula/etc/bconsole.conf:ro
    #   - ./etc/baculum:/etc/baculum:rw
    # ports:
    #   - 9096:9096
