ionos_sbx/bacula/service-baculum-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: baculum-web
  namespace: bacula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bacula
    app.kubernetes.io/name: bacula
  ports:
    - name: http
      port: 9095
      protocol: TCP
      targetPort: 9095


    # baculum-web:
    # image: fametec/baculum-web:11.0.5
    # restart: unless-stopped
    # depends_on: 
    #   - baculum-api
    # volumes:
    #   - ./etc/bconsole.conf:/opt/bacula/etc/bconsole.conf:ro
    #   - ./etc/baculum:/etc/baculum:rw
    # ports:
    #   - 9095:9095
