ionos_sbx/bacula/baculum-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baculum-api-ingress
  namespace: bacula
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: baculum-api.dome-marketplace-sbx.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: baculum-api
            port:
              number: 9096
  tls:
  - hosts:
    - baculum-api.dome-marketplace-sbx.org
    secretName: bacula-secret
